Add images and fix margin

--- a/styles/partials/_global.scss
+++ b/styles/partials/_global.scss
@@ -3,6 +3,12 @@
     src: url('../../assets/Font/NunitoSans-Regular.woff') format('woff');
 }
 
+
+/* Variables */
+$black: #323232;
+
+
 body {
     font-family: 'Nunito Sans';
+    margin: 0;
 }
