--- a/styles/partials/_global.scss
+++ b/styles/partials/_global.scss
@@ -1,3 +1,12 @@
+/* Mixins */
+@mixin tablet {
+    @media (min-width: 768px) {
+        @content;
+    }
+}
+
+
+/* Fonts */
 @font-face {
     font-family: 'Nunito Sans';
     src: url('../../assets/Font/NunitoSans-Regular.woff') format('woff');
