Update hover states and dynamic interactions

--- a/styles/partials/_global.scss
+++ b/styles/partials/_global.scss
@@ -1,34 +1,37 @@
 /* Mixins */
 @mixin tablet {
-    @media (min-width: 768px) {
-        @content;
-    }
+  @media (min-width: 768px) {
+    @content;
+  }
 }
 
 @mixin desktop {
-    @media (min-width: 1280px) {
-        @content;
-    }
+  @media (min-width: 1280px) {
+    @content;
+  }
 }
-
 
 /* Fonts */
 @font-face {
-    font-family: 'Nunito Sans';
-    src: url('../../assets/Font/NunitoSans-Regular.woff') format('woff');
+  font-family: "NunitoSans-Regular";
+  src: url("../../assets/Font/NunitoSans-Regular.woff") format("woff");
 }
 
+@font-face {
+    font-family: "NunitoSans-Bold";
+    src: url("../../assets/Font/NunitoSans-Bold.woff") formar("woff");
+}
 
 /* Variables */
 $black: #323232;
-$white: #FFFFFF;
-$mercury: #E1E1E1;
-$alabaster: #FAFAFA;
-$silver: #AFAFAFAF;
+$white: #ffffff;
+$mercury: #e1e1e1;
+$alabaster: #fafafa;
+$silver: #afafafaf;
 
 body {
-    font-family: 'Nunito Sans';
-    margin: 0;
+  font-family: "NunitoSans-Regular", "NunitoSans-Bold";
+  margin: 0;
 }
 
 h1,
@@ -85,208 +88,215 @@ nav {
 }
 
 h1 {
-    margin-bottom: 0;
+  margin-bottom: 0;
+}
+
+h1 {
+  margin-bottom: 0;
+}
+
+.nav-subheading {
+  display: flex;
+  justify-content: space-evenly;
+  width: 100%;
+
+  h3.active {
+    border-bottom: $white solid 0.2rem;
   }
 
-
-  h1 {
-    margin-bottom: 0;
+  h3 {
+    text-decoration: none;
   }
-  
-  .nav-subheading {
+
+  @include tablet {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: flex-start;
+    width: 15%;
+    height: 100%;
+  }
+
+  h3 {
     width: 100%;
-  
+    text-align: center;
+    font-weight: 500;
+    padding: 1rem;
+    margin: 0;
+    font-size: 1rem;
+    border-bottom: 0.1rem solid transparent;
+
     @include tablet {
-      display: flex;
-      justify-content: flex-start;
-      width: 15%;
-      height: 100%;
-    }
-  
-    h3 {
-      width: 100%;
       text-align: center;
-      font-weight: 500;
-      padding: 1rem;
-      margin: 0;
       font-size: 1rem;
-  
-      @include tablet {
-        text-align: center;
-        font-size: 1rem;
-        padding: 2rem;
-      }
-    }
-  
-    h3:hover {
-      font-weight: 800;
-      border-bottom: solid $white 0.2rem;
-      padding-bottom: 0.01rem;
+      padding: 2rem;
     }
   }
 
-  footer {
-    h3 {
-      font-size: 1rem;
-    }
-  
-    .bandsite-logo {
-      display: none;
-  
-      @include tablet {
-        display: flex;
-        justify-content: flex-end;
-      }
-    }
-  
-    @include desktop {
-      padding-left: 5rem;
-      padding-right: 5rem;
-    }
-  
+  h3:hover {
+    font-weight: 800;
+    border-bottom-color: $white;
+  }
+}
+
+footer {
+  h3 {
+    font-size: 1rem;
+  }
+
+  .bandsite-logo {
+    display: none;
+
     @include tablet {
-      .bandsite-bottom {
-        flex-basis: 100%;
-  
-        p {
-          font-size: 0.8rem;
-        }
-  
-        .bandsite-bottom__logo {
-          display: none;
-        }
-      }
-  
-      .bandsite-logo {
-        flex-grow: 1;
-  
-        h1 {
-          margin-top: 2.7rem;
-          display: flex;
-          justify-content: end;
-          font-weight: 500;
-          font-size: 1.5rem;
-        }
-      }
-  
-      h1 {
-        font-size: 2.5rem;
-        flex-grow: 0;
-        height: 40%;
-      }
-  
-      .footer-section-body {
-        padding-top: 1rem;
-        padding-bottom: 1rem;
-        display: flex;
-        justify-content: center;
-        width: 100%;
-        gap: 5%;
-  
-        @include desktop {
-          justify-content: flex-start;
-          gap: 0%;
-  
-          section {
-            flex-basis: 25%;
-          }
-        }
-  
-        section {
-          h3 {
-            font-size: 1rem;
-          }
-  
-          p {
-            font-size: 1rem;
-          }
-        }
-      }
-    }
-  
-    padding: 1rem;
-    background-color: $black;
-    color: $white;
-  
-    .icons {
       display: flex;
-      gap: 10%;
-  
-      @include tablet {
-        gap: 0%;
+      justify-content: flex-end;
+    }
+  }
+
+  @include desktop {
+    padding-left: 5rem;
+    padding-right: 5rem;
+  }
+
+  @include tablet {
+    .bandsite-bottom {
+      flex-basis: 100%;
+
+      p {
+        font-size: 0.8rem;
       }
-  
-      @include desktop {
-        gap: 0%;
-      }
-  
-      img {
-        padding-top: 1rem;
-        height: 2rem;
-      }
-  
-      @include tablet {
-        height: auto;
+
+      .bandsite-bottom__logo {
+        display: none;
       }
     }
-  
+
+    .bandsite-logo {
+      flex-grow: 1;
+
+      h1 {
+        margin-top: 2.7rem;
+        display: flex;
+        justify-content: end;
+        font-weight: 500;
+        font-size: 1.5rem;
+      }
+    }
+
+    h1 {
+      font-size: 2.5rem;
+      flex-grow: 0;
+      height: 40%;
+    }
+
+    .footer-section-body {
+      padding-top: 1rem;
+      padding-bottom: 1rem;
+      display: flex;
+      justify-content: center;
+      width: 100%;
+      gap: 5%;
+
+      @include desktop {
+        justify-content: flex-start;
+        gap: 0%;
+
+        section {
+          flex-basis: 25%;
+        }
+      }
+
+      section {
+        h3 {
+          font-size: 1rem;
+        }
+
+        p {
+          font-size: 1rem;
+        }
+      }
+    }
+  }
+
+  padding: 1rem;
+  background-color: $black;
+  color: $white;
+
+  .icons {
+    display: flex;
+    gap: 10%;
+
+    @include tablet {
+      gap: 0%;
+    }
+
+    @include desktop {
+      gap: 0%;
+    }
+
+    img {
+      padding-top: 1rem;
+      height: 2rem;
+    }
+
+    @include tablet {
+      height: auto;
+    }
+  }
+
+  p {
+    margin: 0;
+  }
+
+  section {
+    @include tablet {
+      flex-basis: 30%;
+    }
+
     p {
       margin: 0;
     }
-  
-    section {
-      @include tablet {
-        flex-basis: 30%;
-      }
-  
-      p {
-        margin: 0;
-      }
-  
-      .email {
-        margin-top: 1rem;
-        margin-bottom: 1rem;
-      }
-  
-      h2 {
-        margin-top: 3rem;
-      }
-  
-      @include tablet {
-        h3 {
-          font-size: 1.1rem;
-        }
+
+    .email {
+      margin-top: 1rem;
+      margin-bottom: 1rem;
+    }
+
+    h2 {
+      margin-top: 3rem;
+    }
+
+    @include tablet {
+      h3 {
+        font-size: 1.1rem;
       }
     }
-  
-    @include tablet {
-      display: flex;
-      flex-wrap: wrap;
-  
-      .icons {
-        max-width: 20%;
-        align-items: end;
-        justify-content: space-between;
-        padding-bottom: 0.8rem;
-        padding-left: 1rem;
-        padding-right: 1rem;
-  
-        img {
-          width: 100%;
-  
-          @include tablet {
-            width: auto;
-            height: 50%;
-            display: flex;
-            align-items: end;
-          }
-  
-          @include desktop {
-            margin-left: 20%;
-          }
+  }
+
+  @include tablet {
+    display: flex;
+    flex-wrap: wrap;
+
+    .icons {
+      max-width: 20%;
+      align-items: end;
+      justify-content: space-between;
+      padding-bottom: 0.8rem;
+      padding-left: 1rem;
+      padding-right: 1rem;
+
+      img {
+        width: 100%;
+
+        @include tablet {
+          width: auto;
+          height: 50%;
+          display: flex;
+          align-items: end;
+        }
+
+        @include desktop {
+          margin-left: 20%;
         }
       }
     }
   }
+}
